# telemetry-processor

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  build.sh  config.schema.json  gdk-config.json  recipe.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: README.md  explanation.md  how-to-guides.md  sample-configurations.md  scripting.md  scripting.mdx  tutorial.md
docs/reference/: configuration.md  data-types.md  messaging-interface.md  metrics.md
k8s/: configmap.yaml  deployment.yaml
src/: app.rs  config.rs  dispatch.rs  json_path.rs  main.rs  observe.rs  route_build.rs  test_support.rs
src/proc/: aggregate.rs  filter.rs  mod.rs  multi.rs  project.rs  route.rs  sample.rs  script.rs
test-configs/: config.json  standalone-messaging.json
