[package]
name = "telemetry-processor"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Reference Rust processing component for ggcommons/edgecommons: subscribe → filter/sample/aggregate/project/script → forward (local / northbound / durable stream → Kinesis/Kafka/file)."
publish = false

# The reference Rust processor component, built on the ggcommons Rust library. It is the
# high-throughput northbound seam between southbound adapters (channel 1) and the cloud
# (channels 2/3). See docs/TELEMETRY_PROCESSOR.md in the ggcommons monorepo.

[[bin]]
name = "telemetry-processor"
path = "src/main.rs"

[features]
# Batteries-included by default: the HOST / Kubernetes binary ships with MQTT + streaming + the
# Kinesis and Parquet/AVRO file sinks + CloudWatch, so a config "just works" without recompiling.
# Two capabilities stay opt-in for hard build reasons: `greengrass` (the AWS GG IPC SDK is a
# Linux-only C-FFI crate — it would break `cargo build` on Windows/macOS; the device build opts in
# via build.sh) and `streaming-kafka` (rdkafka vendors librdkafka through cmake + a C toolchain).
default = ["standalone", "streaming", "streaming-kinesis", "streaming-file-parquet", "streaming-file-avro", "cloudwatch"]
# Runtime selection (mirrors the library): standalone = dual-broker MQTT (containers/laptops);
# greengrass = IPC (device; Linux-only build).
standalone = ["ggcommons/standalone"]
greengrass = ["ggcommons/greengrass"]
cloudwatch = ["ggcommons/cloudwatch"]
# Durable streaming targets (the `stream:<name>` route target). `streaming` alone is buffer-only;
# add a sink feature for real export. The file sink (Parquet/AVRO) lives in the ggstreamlog core.
streaming = ["ggcommons/streaming"]
streaming-kinesis = ["streaming", "ggcommons/streaming-kinesis"]
streaming-kafka = ["streaming", "ggcommons/streaming-kafka"]
streaming-file-parquet = ["streaming", "ggcommons/streaming-file-parquet"]
streaming-file-avro = ["streaming", "ggcommons/streaming-file-avro"]

[dependencies]
# The ggcommons Rust library, pinned to a commit on edgecommons/ggcommons (private). Building this
# repo standalone needs read access to that repo. The fetch goes through the git CLI (see
# .cargo/config.toml); locally it uses your gh/git credential helper, and in CI the reusable workflow
# rewrites this https URL with the EDGECOMMONS_READ_TOKEN PAT. For local development against an
# unpushed change, temporarily swap this for `path = "../ggcommons-monorepo/libs/rust"`.
ggcommons = { git = "https://github.com/edgecommons/ggcommons.git", rev = "cc037a92c1780c3d88cc98885cfdefec0403a898", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
smallvec = "1"
# Embedded scripting for the `script` stage + the Rhai `filter` option (always compiled in).
# `sync` makes Engine/AST/Dynamic Send+Sync (shared across route workers); `serde` converts the
# message JSON to/from a Rhai value.
rhai = { version = "1", features = ["sync", "serde"] }

[dev-dependencies]
tempfile = "3"
